includes whatsapp icon

--- a/contact.html
+++ b/contact.html
@@ -112,15 +112,17 @@
         </form>
       </div>
       <div class="contact-info">
-        <h3>Our Office</h3>
-        <p><strong>WattSun Solar</strong></p>
-        <p>123 Solar Avenue,<br/>Nairobi, Kenya</p>
-        <h3>Contact</h3>
-        <p>📞 +254 712 345 678</p>
-        <p>✉️ info@wattsunsolar.co.ke</p>
-        <h3>Office Hours</h3>
-        <p>Mon–Fri: 9 AM – 6 PM EAT</p>
-      </div>
+  <h3>Our Office</h3>
+  <p><strong>WattSun Solar</strong></p>
+  <p>Loresho Ridge, next to Qaribu Inn,<br/>Nairobi, Kenya</p>
+  <h3>Contact</h3>
+  <p style="display: flex; align-items: center; gap: 10px; margin-bottom: 7px;">
+    <a class="whatsapp-link" href="https://wa.me/254722761212" target="_blank" rel="noopener" title="Chat with us on WhatsApp"></a>
+    <a href="mailto:info@wattsunsolar.co.ke" style="color:inherit; text-decoration:underline; margin-left:2px;">info@wattsunsolar.co.ke</a>
+  </p>
+  <h3>Office Hours</h3>
+  <p>Mon–Sat: 9 AM – 6 PM EAT</p>
+</div>
     </div>
     <div class="map">
       <iframe allowfullscreen height="300" loading="lazy"
@@ -131,8 +133,9 @@
 
   <!-- Footer: Unchanged -->
   <footer>
-    &copy; 2025 WattSun Solar Kenya | <a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a>
+    &copy; 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
   </footer>
+  <script src="main.js"></script>
 </body>
 </html>
 <!-- End of contact.html -->
