--- a/index.html
+++ b/index.html
@@ -165,9 +165,12 @@
 </section>
 
 <footer>
-  <p>Contact us: +254 712 345678 | info@wattsun.co.ke</p>
+  <div class="footer-contacts">
+    <a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a>
+  </div>
   <p>© 2025 WattSun Solar. All rights reserved.</p>
 </footer>
+  <script src="main.js"></script>
 </body>
 </html>
 
