--- a/projects.html
+++ b/projects.html
@@ -113,15 +113,16 @@
         </div>
       </div>
     </div>
-    <div style="text-align:center;">
+   <!-- <div style="text-align:center;">
       <a class="gold-btn" href="#">View More Projects</a>
-    </div>
+    </div>-->
   </section>
 
   <!-- Footer: From main.css -->
   <footer>
-    &copy; 2025 WattSun Solar Kenya | <a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a>
+    &copy; 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
   </footer>
+  <script src="main.js"></script>
 </body>
 </html>
 
