--- a/shop.html
+++ b/shop.html
@@ -281,9 +281,12 @@ function addToCart(item, price, inputId) {
 </script>
 
 <footer>
-    <p>Contact us: +254 712 345678 | info@wattsun.co.ke</p>
-    <p>© 2025 WattSun Solar. All rights reserved.</p>
+  <div class="footer-contacts">
+    <a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a>
+  </div>
+  <p>© 2025 WattSun Solar. All rights reserved.</p>
 </footer>
+  <script src="main.js"></script>
 </body>
 </html>
 <!-- This is the shop page for WattSun Solar, displaying available solar systems and products. -->
