--- a/solutions.html
+++ b/solutions.html
@@ -144,5 +144,6 @@
     <p>WattSun Solar © 2025 | Harness the Sun. Live Better.</p>
     <p>M-Pesa payments accepted. Delivery anywhere in Kenya.</p>
 </footer>
+  <script src="main.js"></script>
 </body>
 </html>
