--- a/thankyou.html
+++ b/thankyou.html
@@ -49,5 +49,6 @@
     </p>
     <a href="index.html" class="button">Return to Home</a>
   </div>
+  <script src="main.js"></script>
 </body>
 </html>
