--- a/404.html
+++ b/404.html
@@ -15,6 +15,6 @@
   <h1>404</h1>
   <p>Sorry, the page you’re looking for doesn’t exist.</p>
   <a href="index.html">Back to Home</a>
+  <script src="main.js"></script>
 </body>
-
 </html>
