--- a/cart.html
+++ b/cart.html
@@ -163,8 +163,9 @@
   </script>
 
   <footer>
-    &copy; 2025 WattSun Solar Kenya | <a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a>
+    &copy; 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
   </footer>
+  <script src="main.js"></script>
 </body>
 </html>
 
