--- a/financing.html
+++ b/financing.html
@@ -160,8 +160,9 @@
 
   <!-- Footer: From main.css -->
   <footer>
-    &copy; 2025 WattSun Solar Kenya | <a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a>
+    &copy; 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
   </footer>
+  <script src="main.js"></script>
 </body>
 </html>
 <!-- End of financing.html -->
