mobile responsiveness test

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8"/>
   <title>WattSun Solar - Home</title>
+  <!-- Mobile responsive meta tag added -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="main.css">
   <style>
     /* CTA section centering override */
@@ -173,4 +175,3 @@
   <script src="main.js"></script>
 </body>
 </html>
-
